--- a/slnAllShow/prjAllShow.Backend/prjAllShow.Backend.csproj
+++ b/slnAllShow/prjAllShow.Backend/prjAllShow.Backend.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="App_Data\logs\" />
+    <Folder Include="App_Data\NLog.Errors\" />
     <Folder Include="Models\" />
     <Folder Include="Data\" />
     <Folder Include="Resources\" />
@@ -21,6 +23,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.0" />
+    <PackageReference Include="NLog" Version="4.7.13" />
+    <PackageReference Include="NLog.Config" Version="4.7.10" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
   </ItemGroup>
 
 </Project>
