測試檔案上傳，分別存入實體路徑跟DB並做測試

--- a/slnAllShow/prjAllShow.Backend/prjAllShow.Backend.csproj
+++ b/slnAllShow/prjAllShow.Backend/prjAllShow.Backend.csproj
@@ -9,9 +9,8 @@
   <ItemGroup>
     <Folder Include="App_Data\logs\" />
     <Folder Include="App_Data\NLog.Errors\" />
-    <Folder Include="Models\" />
-    <Folder Include="Data\" />
     <Folder Include="Resources\" />
+    <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +21,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.0" />
     <PackageReference Include="NLog" Version="4.7.13" />
     <PackageReference Include="NLog.Config" Version="4.7.10" />
