--- a/slnAllShow/prjAllShow.Backend/appsettings.json
+++ b/slnAllShow/prjAllShow.Backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AllShowDBContext": "Server=(localdb)\\mssqllocaldb;Database=AllShowDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
