新增Identity功能跟多國與功能

--- a/slnAllShow/prjAllShow.Backend/appsettings.json
+++ b/slnAllShow/prjAllShow.Backend/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AllShowDBContext": "Server=(localdb)\\mssqllocaldb;Database=AllShowDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AllShowDBContext": "Server=(localdb)\\mssqllocaldb;Database=AllShowDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityDBContext": "Server=(localdb)\\mssqllocaldb;Database=AllShowDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
