--- a/slnAllShow/prjAllShow.Backend/prjAllShow.Backend.csproj
+++ b/slnAllShow/prjAllShow.Backend/prjAllShow.Backend.csproj
@@ -9,11 +9,11 @@
   <ItemGroup>
     <Folder Include="App_Data\logs\" />
     <Folder Include="App_Data\NLog.Errors\" />
-    <Folder Include="Areas\Admin\Controllers\" />
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Factory\Data\" />
+    <Folder Include="Areas\Factory\Models\" />
     <Folder Include="Helper\" />
-    <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
   <ItemGroup>
