新增Admin員工尋覽頁跟授權新增至Admin Controller

--- a/slnAllShow/prjAllShow.Backend/prjAllShow.Backend.csproj
+++ b/slnAllShow/prjAllShow.Backend/prjAllShow.Backend.csproj
@@ -13,6 +13,10 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Factory\Data\" />
     <Folder Include="Areas\Factory\Models\" />
+    <Folder Include="Areas\WebApi\Controllers\" />
+    <Folder Include="Areas\WebApi\Data\" />
+    <Folder Include="Areas\WebApi\Models\" />
+    <Folder Include="Areas\WebApi\Views\" />
     <Folder Include="Helper\" />
   </ItemGroup>
 
