--- a/slnAllShow/prjAllShow.Backend/prjAllShow.Backend.csproj
+++ b/slnAllShow/prjAllShow.Backend/prjAllShow.Backend.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AllShowRepository\AllShowRepository.csproj" />
     <ProjectReference Include="..\AllShowService\AllShowService.csproj" />
   </ItemGroup>
 
