測試發佈到IIS

--- a/slnAllShow/prjAllShow.Backend/appsettings.json
+++ b/slnAllShow/prjAllShow.Backend/appsettings.json
@@ -1,13 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Information"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AllShowDBContext": "Server=(localdb)\\mssqllocaldb;Database=AllShowDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IdentityDBContext": "Server=(localdb)\\mssqllocaldb;Database=AllShowDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AllShowDBContext": "Data Source=localhost;Initial Catalog=AllShowDB;User ID=allshow;Password=7ygvbNMJU&hh",
+    "IdentityDBContext": "Data Source=localhost;Initial Catalog=AllShowDB;User ID=allshow;Password=7ygvbNMJU&hh"
   }
 }
