WebAPI 加入JWT，透過api/GetAuth/authentication的email和password去比對DB得到token，再測試PostMan header 加入Authorization+Bearer token 後呼叫api/Test去取得UserDTO的List資料

--- a/slnAllShow/prjAllShow.Backend/appsettings.json
+++ b/slnAllShow/prjAllShow.Backend/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "https_port": 44397,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,7 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AllShowDBContext": "Data Source=localhost;Initial Catalog=AllShowDB;User ID=allshow;Password=7ygvbNMJU&hh",
-    "IdentityDBContext": "Data Source=localhost;Initial Catalog=AllShowDB;User ID=allshow;Password=7ygvbNMJU&hh"
+    "AllShowDBContext": "Server=(localdb)\\mssqllocaldb;Database=AllShowDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityDBContext": "Server=(localdb)\\mssqllocaldb;Database=AllShowDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"AllShowDBContext": "Data Source=localhost;Initial Catalog=AllShowDB;User ID=allshow;Password=7ygvbNMJU&hh",
+    //"IdentityDBContext": "Data Source=localhost;Initial Catalog=AllShowDB;User ID=allshow;Password=7ygvbNMJU&hh"
   }
 }
