--- a/slnAllShow/prjAllShow.WebAPI/appsettings.json
+++ b/slnAllShow/prjAllShow.WebAPI/appsettings.json
@@ -1,9 +1,21 @@
 {
+  "https_port": 44393,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AllShowDBContext": "Server=(localdb)\\mssqllocaldb;Database=AllShowDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityDBContext": "Server=(localdb)\\mssqllocaldb;Database=AllShowDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"AllShowDBContext": "Data Source=localhost;Initial Catalog=AllShowDB;User ID=allshow;Password=7ygvbNMJU&hh",
+    //"IdentityDBContext": "Data Source=localhost;Initial Catalog=AllShowDB;User ID=allshow;Password=7ygvbNMJU&hh"
+  },
+  "Jwt": {
+    "Key": "Pokemon go is skynet",
+    "Issuer": "Mark",
+    "Audience": "https://localhost:5001/"
+  }
 }
