--- a/slnAllShow/prjAllShow.WebAPI/Properties/launchSettings.json
+++ b/slnAllShow/prjAllShow.WebAPI/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:34186",
-      "sslPort": 0
+      "sslPort": 44393
     }
   },
   "profiles": {
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5154",
+      "applicationUrl": "https://localhost:7154;http://localhost:5154",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
