--- a/slnAllShow/prjAllShow.WebAPI/prjAllShow.WebAPI.csproj
+++ b/slnAllShow/prjAllShow.WebAPI/prjAllShow.WebAPI.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AllShowRepository\AllShowRepository.csproj" />
+    <ProjectReference Include="..\AllShowService\AllShowService.csproj" />
   </ItemGroup>
 
 </Project>
