--- a/slnAllShow/prjAllShow.Backend/appsettings.json
+++ b/slnAllShow/prjAllShow.Backend/appsettings.json
@@ -12,5 +12,6 @@
     "IdentityDBContext": "Server=(localdb)\\mssqllocaldb;Database=AllShowDB;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"AllShowDBContext": "Data Source=localhost;Initial Catalog=AllShowDB;User ID=allshow;Password=7ygvbNMJU&hh",
     //"IdentityDBContext": "Data Source=localhost;Initial Catalog=AllShowDB;User ID=allshow;Password=7ygvbNMJU&hh"
-  }
+  },
+  "LoginExpireMinute": 60
 }
