測試被登出

--- a/slnAllShow/prjAllShow.WebAPI/appsettings.json
+++ b/slnAllShow/prjAllShow.WebAPI/appsettings.json
@@ -17,5 +17,6 @@
     "Key": "Pokemon go is skynet",
     "Issuer": "Mark",
     "Audience": "https://localhost:5001/"
-  }
+  },
+  "LoginExpireMinute": 5
 }
