--- a/slnAllShow/prjAllShow.WebAPI/appsettings.json
+++ b/slnAllShow/prjAllShow.WebAPI/appsettings.json
@@ -18,5 +18,5 @@
     "Issuer": "Mark",
     "Audience": "https://localhost:5001/"
   },
-  "LoginExpireMinute": 5
+  "EXPIRY_DURATION_MINUTES": 60
 }
