測試token驗證和撈資料

--- a/slnAllShow/prjAllShow.Backend/appsettings.json
+++ b/slnAllShow/prjAllShow.Backend/appsettings.json
@@ -13,5 +13,9 @@
     //"AllShowDBContext": "Data Source=localhost;Initial Catalog=AllShowDB;User ID=allshow;Password=7ygvbNMJU&hh",
     //"IdentityDBContext": "Data Source=localhost;Initial Catalog=AllShowDB;User ID=allshow;Password=7ygvbNMJU&hh"
   },
-  "LoginExpireMinute": 60
+  "LoginExpireMinute": 60,
+  "WebAPIUrl": "https://localhost:7154/api/",
+  "Jwt": {
+    "Key": "Pokemon go is skynet"
+  }
 }
