重新整理TokenService、Backend/GetAuth、WebAPI/GetAuth、修正RefreshToken存取

--- a/slnAllShow/prjAllShow.WebAPI/appsettings.json
+++ b/slnAllShow/prjAllShow.WebAPI/appsettings.json
@@ -16,7 +16,8 @@
   "Jwt": {
     "Key": "Pokemon go is skynet",
     "Issuer": "Mark",
-    "Audience": "https://localhost:5001/"
+    "Audience": "https://localhost:5001/",
+    "Expire_Minutes": 15
   },
   "EXPIRY_DURATION_MINUTES": 15
 }
