--- a/slnAllShow/prjAllShow.Backend/appsettings.json
+++ b/slnAllShow/prjAllShow.Backend/appsettings.json
@@ -14,8 +14,5 @@
     //"IdentityDBContext": "Data Source=localhost;Initial Catalog=AllShowDB;User ID=allshow;Password=7ygvbNMJU&hh"
   },
   "LoginExpireMinute": 60,
-  "WebAPIUrl": "https://localhost:7154/api/",
-  "Jwt": {
-    "Key": "Pokemon go is skynet"
-  }
+  "WebAPIUrl": "https://localhost:7154/api/"
 }
