傳輸的帳密再經過AES處理，取得天氣的資料改由backend.WAPI

--- a/slnAllShow/AllShowRepository/AllShowRepository.csproj
+++ b/slnAllShow/AllShowRepository/AllShowRepository.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AllShowCommon\AllShowCommon.csproj" />
     <ProjectReference Include="..\AllShowDTO\AllShowDTO.csproj" />
   </ItemGroup>
 
