--- a/slnAllShow/prjAllShow.WebAPI/appsettings.json
+++ b/slnAllShow/prjAllShow.WebAPI/appsettings.json
@@ -19,5 +19,6 @@
     "Audience": "https://localhost:5001/",
     "Expire_Minutes": 15
   },
-  "EXPIRY_DURATION_MINUTES": 15
+  "EXPIRY_DURATION_MINUTES": 15,
+  "AES_Key": "ThisIsAesKey"
 }
