--- a/slnAllShow/prjAllShow.Backend/package.json
+++ b/slnAllShow/prjAllShow.Backend/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.6.0",
     "jquery-validation": "^1.19.3",
     "jquery-validation-unobtrusive": "^3.2.12",
-    "vue": "^2.6.14"
+    "moment-mini": "^2.24.0",
+    "vue": "3.2.31"
   }
 }
