修改商店類別與Model

--- a/slnAllShow/prjAllShow.Backend/appsettings.json
+++ b/slnAllShow/prjAllShow.Backend/appsettings.json
@@ -15,5 +15,6 @@
   },
   "LoginExpireMinute": 60,
   "WebAPIUrl": "https://localhost:7154/api",
-  "AES_Key": "ThisIsAesKey"
+  "AES_Key": "ThisIsAesKey",
+  "shClassOtherId": 6
 }
