--- a/slnAllShow/prjAllShow.Backend/package.json
+++ b/slnAllShow/prjAllShow.Backend/package.json
@@ -13,9 +13,11 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "jquery": "^3.6.0",
+    "jquery-multiselect": "^1.0.0",
     "jquery-validation": "^1.19.3",
     "jquery-validation-unobtrusive": "^3.2.12",
     "moment-mini": "^2.24.0",
+    "slim-select": "^1.27.1",
     "vue": "3.2.31"
   }
 }
